--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.25.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "firebase": "^9.6.3",
     "firebase-tools": "^10.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.12",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
